added features
